# dewatermark-platform

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  llms-full.txt  llms.txt  project_report.html  pyproject.toml  项目启动提示词.md
.runtime/: lock.yaml
.runtime/models/: manifest.yaml
apps/api/: main.py
apps/worker/: __init__.py  main.py
docs/: api.md  architecture.md  faq.md  index.md  overview.md  requirements.md  review.md  roadmap.md
plans/: execution_plan.md  improvement_plan.md
plans/eval_dataset/: README.md
src/wm_platform/: __init__.py  api_app.py  bootstrap.py  callbacks.py  cli_api.py  cli_worker.py  comfy_runtime.py  config.py  db.py  dependencies.py  doctor.py  errors.py  job_locks.py  maintenance.py  models.py  provider_runtime.py  rate_limit.py  repository.py  runtime_contract.py  runtime_installer.py  storage.py  worker_service.py
tests/: conftest.py  test_api_workflow.py
workflows/: corner_watermark_hq.json  sam2_diffueraser_api.json  sam2_diffueraser_balanced.json  sam2_diffueraser_quality.json  sam2_fallback_inpaint_api.json
