[project]
name = "dewatermark-platform"
version = "0.1.0"
description = "Open source local-first AI video dewatermark platform with async API and worker"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.13"
keywords = ["ai", "dewatermark", "watermark-removal", "video", "comfyui", "fastapi", "self-hosted"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Multimedia :: Video",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pyyaml>=6.0.2",
  "python-multipart>=0.0.20",
  "uvicorn>=0.35.0",
]

[project.urls]
Homepage = "https://github.com/tytsxai/dewatermark-platform"
Repository = "https://github.com/tytsxai/dewatermark-platform"
Issues = "https://github.com/tytsxai/dewatermark-platform/issues"
Documentation = "https://github.com/tytsxai/dewatermark-platform/blob/main/README.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[project.scripts]
dewatermark-api = "wm_platform.cli_api:main"
dewatermark-worker = "wm_platform.cli_worker:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
